--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,7 +16,7 @@ en:
     name: "Enter name:\n"
   error:
     command_error: 'Wrong command. Try again!'
-    guess_input_error: "The guess must be 4 digits long. Each digit is a number nust be in the range 1-6:\n"
+    guess_input_error: "The guess must be %{code_length} digits long. Each digit is a number nust be in the range %{code_range_first}-%{code_range_last}:\n"
     name_length_error: "The name must be from 3 to 20 characters long.\n"
     difficulty_input_error: "This difficulty is not available.\n"
   game:
@@ -34,26 +34,26 @@ en:
         \neasy -> %{easy}
         \nmedium -> %{medium}
         \nhell -> %{hell}\n"
-    rules: |
-      Game Rules:
-          1.Codebreaker is a logic game in which a code-breaker tries to break a secret code
-          created by a code-maker. The codemaker, which will be played by the application we’re
-          going to write, creates a secret code of four numbers between 1 and 6.
-          2.The codebreaker gets some number of chances to break the code (depends on chosen
-          difficulty). In each turn, the codebreaker makes a guess of 4 numbers. The codemaker
-          then marks the guess with up to 4 signs - + or - or empty spaces.
-          3.A + indicates an exact match: one of the numbers in the guess is the same as one of the
-          numbers in the secret code and in the same position. For example:
-          Secret number - 1234
-          Input number - 6264
-          Number of pluses - 2 (second and fourth position)
-          4.A - indicates a number match: one of the numbers in the guess is the same as one of the
-          numbers in the secret code but in a different position. For example:
-          Secret number - 1234
-          Input number - 6462
-          Number of minuses - 2 (second and fourth position)
-          5.An empty space indicates that there is not a current digit in a secret number.
-          6.If codebreaker inputs the exact number as a secret number - codebreaker wins the
-          game. If all attempts are spent - codebreaker loses.
-          7.Codebreaker also has some number of hints(depends on chosen difficulty). If a user takes
-          a hint - he receives back a separate digit of the secret code.
+    rules: 
+      "Game Rules:\n
+          1.Codebreaker is a logic game in which a code-breaker tries to break a secret code\n
+          created by a code-maker. The codemaker, which will be played by the application we’re\n
+          going to write, creates a secret code of four numbers between %{code_range_first} and %{code_range_last}.\n
+          2.The codebreaker gets some number of chances to break the code (depends on chosen\n
+          difficulty). In each turn, the codebreaker makes a guess of %{code_length} numbers. The codemaker\n
+          then marks the guess with up to %{code_length} signs - + or - or empty spaces.\n
+          3.A + indicates an exact match: one of the numbers in the guess is the same as one of the\n
+          numbers in the secret code and in the same position. For example:\n
+          Secret number - 1234\n
+          Input number - 6264\n
+          Number of pluses - 2 (second and fourth position)\n
+          4.A - indicates a number match: one of the numbers in the guess is the same as one of the\n
+          numbers in the secret code but in a different position. For example:\n
+          Secret number - 1234\n
+          Input number - 6462\n
+          Number of minuses - 2 (second and fourth position)\n
+          5.An empty space indicates that there is not a current digit in a secret number.\n
+          6.If codebreaker inputs the exact number as a secret number - codebreaker wins the\n
+          game. If all attempts are spent - codebreaker loses.\n
+          7.Codebreaker also has some number of hints(depends on chosen difficulty). If a user takes\n
+          a hint - he receives back a separate digit of the secret code.\n"
